<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp">

    <EditText
        android:id="@+id/edt_signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/phone_email"
        android:singleLine="true"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/edt_signup_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxEms="12"
        android:singleLine="true"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/edt_signup_pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/comfirm_password"
        android:inputType="textPassword"
        android:maxEms="12"
        android:singleLine="true"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/ll_signup_securityCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/edt_signup_securityCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/security_code" />

        <TextView
            android:id="@+id/tv_signup_getSecurityCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_security_code" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_signup_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingRight="21dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_signup_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:paddingLeft="13dp"
            android:text="@string/forget_pwd"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>