<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/white">

    <EditText
        android:layout_marginTop="12dp"
        android:id="@+id/edt_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_email"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_login_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_login_forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/forget_pwd" />

    </LinearLayout>

    <Button
        android:layout_marginTop="12dp"
        android:id="@+id/btn_login"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/tv_login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup"
        android:textSize="16sp"/>
</LinearLayout>