<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weight_tip"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/userweight"
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:layout_margin="10dp"
            android:background="@null"
            android:src="@drawable/add_weight_icon" />

        <HorizontalScrollView
            android:id="@+id/birthruler"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/birthday_ruler"
            android:scrollbars="none" >

            <LinearLayout
                android:id="@+id/ruler_layout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal" >
            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/weight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_birth_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="105dp"
            android:id="@+id/tv_weight_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</LinearLayout>