<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/height_tip" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/height"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/user_height_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                >

                <ImageView
                    android:id="@+id/userheighthead"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/userinfo_head_1" />

                <ImageView
                    android:layout_marginTop="85dp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/userheightbody"
                    android:layout_width="wrap_content"
                    android:layout_height="280dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/userinfo_body_1" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/v_ruler"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="350dp"
                android:layout_margin="10dp"
                android:background="@drawable/bg_ruler" >

                <View
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_centerInParent="true"
                    android:background="@color/colorPrimary" />

                <ScrollView
                    android:id="@+id/vruler"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/vruler_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >
                    </LinearLayout>

                </ScrollView>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/tv_height_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</LinearLayout>