<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_me_userinfo"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="Hins"
            android:textColor="@color/white"
            android:textSize="@dimen/actionbar_title" />

        <ImageView
            android:id="@+id/iv_user_ic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_man"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user_info_height"
                    android:textColor="@color/white"
                    android:textSize="@dimen/user_info" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_user_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="175"
                        android:textColor="@color/white"
                        android:textSize="@dimen/user_info" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  cm"
                        android:textColor="@color/white"
                        android:textSize="@dimen/user_info" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user_info_weight"
                    android:textColor="@color/white"
                    android:textSize="@dimen/user_info" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_user_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="70"
                        android:textColor="@color/white"
                        android:textSize="@dimen/user_info" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  kg"
                        android:textColor="@color/white"
                        android:textSize="@dimen/user_info" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user_info_bmi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/user_info" />

                <TextView
                    android:id="@+id/tv_user_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="22.25"
                    android:textColor="@color/white"
                    android:textSize="@dimen/user_info" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_me_smart"
        android:layout_marginTop="10dp"
        android:dividerHeight="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lv_me_option"
        android:layout_marginTop="10dp"
        android:dividerHeight="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
